Add unpaid amount to subscription
