# server/models/subscriptions_model.py
@@ -1,5 +1,6 @@
 from datetime import datetime
-from enums.subscriptions.subscription_paid_stage_enum import SubscriptionPaidStage
+from uuid import UUID
+from enums.subscriptions.subscription_paid_status_enum import SubscriptionPaidStatus
 from enums.subscriptions.subscription_recurrence_enum import SubscriptionRecurrence
 from enums.subscriptions.subscription_status_enum import SubscriptionStatus
 from models.base_model import BaseModel
@@ -9,6 +10,7 @@ class RecurringBillsSummary(BaseModel):
     paidAmount: float
     totalUpcomingAmount: float
     dueSoonAmount: float
+    unpaidAmount: float
 
 
 class Subscription(BaseModel):
@@ -18,7 +20,8 @@ class Subscription(BaseModel):
     amount: float
     recurrence: SubscriptionRecurrence
     status: SubscriptionStatus
-    paidStatus: SubscriptionPaidStage
+    paidStatus: SubscriptionPaidStatus
+
 
 class SubscriptionsContent(BaseModel):
     monthlySummary: RecurringBillsSummary
